--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="new_task">New Task</string>
     <string name="description">Description</string>
     <string name="add_task">Add Task</string>
+    <string name="todo">TODO</string>
 </resources>
