--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,7 @@
     <string name="description">Description</string>
     <string name="add_task">Add Task</string>
     <string name="todo">TODO</string>
+    <string name="settings">Settings</string>
+    <string name="notes">Notes</string>
+    <string name="todos">ToDos</string>
 </resources>
