--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,6 @@
     <string name="settings">Settings</string>
     <string name="notes">Notes</string>
     <string name="todos">ToDos</string>
+    <string name="title">Title:</string>
+    <string name="color">Color:</string>
 </resources>
