--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="todos">ToDos</string>
     <string name="title">Title:</string>
     <string name="color">Color:</string>
+    <string name="submit">Submit</string>
+    <string name="back">Back</string>
 </resources>
