--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
+    <!-- task stuff -->
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="new_task">New Task</string>
@@ -20,6 +21,8 @@
     <string name="color">Color:</string>
     <string name="submit">Submit</string>
     <string name="back">Back</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <!-- note stuff -->
+    <string name="note_title_preview">Note title…</string>
+    <string name="note_text_preview">Note text…</string>
 </resources>
