add new icon, remove highlighting refresh

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="note_title_preview">Note title…</string>
     <string name="note_text_preview">Note text…</string>
     <string name="dialog_ok">OK</string>
+    <string name="refresh">Refresh</string>
 </resources>
