--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,21 @@
     <string name="profile_name">Profile-Name</string>
     <string name="profile_creation_date">Creation Date</string>
 
+    <!-- profile dialog -->
+    <string name="dial_prof_name_hint">Name…</string>
+    <string name="dial_prof_pass">Password…</string>
+    <string name="dial_prof_reppass">Repeat Password…</string>
+    <string name="dial_prof_label_id">ID:</string>
+    <string name="dial_prof_label_name">Name:</string>
+    <string name="dial_prof_label_pass">Password:</string>
+    <string name="dial_prof_label_reppass">Repeat Password:</string>
+    <string name="dial_prof_info_text">
+        Your todos and notes are stored by profiles. Therefore you must create a profile, no matter if you decide to use
+        a self hosted server instance later on or not. Even if you only use it on your local device, you can create
+        multiple profiles and switch between them to ensure a better organization and structure. To create such a
+        profile, you have to choose a name and a password. You can also just leave the fields empty but be aware, the
+        created profile cannot be uploaded to server before you entered credentials.
+    </string>
+
+
 </resources>
