--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,8 +50,9 @@
     <string name="dial_prof_label_reppass">Repeat Password:</string>
     <string name="dial_prof_info_text">Create a profile to divide your data by profiles!</string>
 
-    <string name="dial_log_login">LOGIN</string>
+    <string name="dial_log_login">Login</string>
     <string name="dial_log_info_text">Login using your name and password:</string>
+    <string name="dial_log_signup">Or Sign Up</string>
 
 
 </resources>
